cluster-charts/argocd-crd-boot/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server-vs
  namespace: argocd
spec:
  gateways:
  - ingressgateway.istio-system.svc.cluster.local
  hosts:
  - argocd.example.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
